@@ -3,6 +3,7 @@ qtsvg-opensource-src (5.12.2-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release.
   * Bump Qt build-dependencies to 5.12.2.
+  * Remove code to fix permissions in examples, no longer needed.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 21 Mar 2019 15:57:44 +0300
 
